Removed Google maps due to lack of responsiveness. JA and CSS did not work. Thus JS and CSS code for the map has been removed as well. Added colour to teh SoMe on the footer

--- a/templates/base.html
+++ b/templates/base.html
@@ -118,9 +118,9 @@
         <p class="m-0 text-center text-white">Made by Vanessa Andersson</p>
         <p class="m-0 text-center text-white">Follow me:
             <a href="https://github.com/van-essa" target="_blank" title="Vanessa">
-                <i class="fab fa-github white-text"> </i></a>
+                <i class="fab fa-github"  style="color: #d606ba;"> </i></a>
             <a href="https://www.linkedin.com/in/vanessaannamariaandersson/" target="_blank" title="My_LinkedIn">
-                <i class="fab fa-linkedin-in white-text"> </i></a>
+                <i class="fab fa-linkedin-in" style="color: #d606ba;"> </i></a>
     </footer>
 
     <!-- Timer showing the allert messages -->
