--- a/templates/classes.html
+++ b/templates/classes.html
@@ -125,23 +125,20 @@
       </div>
     </div>
   
-        <div class="container">
+        <div class="container" id="map-section">
           <div class="row align-items-center">
             <div class="col-lg-12 ms-auto mt-lg-0 mt-4">
               <div class="card">
                 <div class="card-header p-0 position-relative mt-n4 mx-3 z-index-2">
                 </div>
-                <div class="card-body text-center" id="map-section">
+                <div class="card-body text-center">
                   <h3 class="font-weight-normal" style="color: #d606ba;">
                     Find Us!
                   </h3>
                   <h5 class="mb-0">
-                    LadyBike is based in central Stockholm at Regeringsgatan 1, 111 53 Stockholm.<br>
+                    LadyBike is based in central Stockholm at Stockholmsgatan 1, 111 53, Stockholm.<br>
                     We are looking forward to sweating with you!
-                  </h5><br>
-                   <!-- Map section of footer to be hidden on mobiles -->
-                  <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2035.1831986220532!2d18.0685133!3d59.3298952!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x465f9d5ed1117e2f%3A0x129118f2d430e145!2sRegeringsgatan%201%2C%20111%2053%20Stockholm!5e0!3m2!1sen!2sse!4v1660053666273!5m2!1sen!2sse" 
-                  width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                  </h5>
                 </div>
               </div>
             </div>
