Ladybike was dublicated on the classes section, replaced it with ride that hill info

--- a/templates/classes.html
+++ b/templates/classes.html
@@ -53,16 +53,17 @@
       {% endif %}
     </div>
     <div class="card">
-      <img  class="card-img-top" src="{% static 'images/ride_that_hill_class.png' %}" alt="spinning_class">
+      <img  class="card-img-top" src="{% static 'images/ride_that_hill_class.png' %}" alt="ride_that_hill_class">
       <div class="card-body">
-        <h2 class="card-title pt-4" style="color: #d606ba;">Ladybike</h2>
+        <h2 class="card-title pt-4" style="color: #d606ba;">Ride that hill</h2>
                                 <h6>Available: <span style="color: #d606ba;">Everyday</span></h6>
-                                <h6>Start Time: <span style="color: #d606ba;">18:00 PM</span></h6>
-                                <h6>Ends: <span style="color: #d606ba;">19:00 PM</span></h6>
+                                <h6>Start Time: <span style="color: #d606ba;">11:30 AM</span></h6>
+                                <h6>Ends: <span style="color: #d606ba;">12:30 PM</span></h6>
                                 <h6>Calories burnt: <span style="color: #d606ba;">600-700</span></h6>
-                                <p class="card-text">Is an intense combo class that will push your body to the limit. 
-                                    It combines intervals of cardio with strength conditioning, moving quickly between 
-                                    the bike and equipment on the ground. Expect to work with dumbbells, bands, gliders, and your own body-weight.
+                                <p class="card-text">Ride that hill is an indoor cycling climbing drill where you simulate a hill that 
+                                  creeps in grade into a very steep mountain-like incline by the end. Whilst cycling up hills seated, 
+                                  you engage your quads, glutes, and calves more than you would if cycling on flat terrain. A great class 
+                                  to increase your strength and power.
                                   </p>
       </div>
       <!-- Adjusting the view according to authentication -->
