Replaced the input with button to my JS code in the article detail html file as the input was not defined

--- a/templates/article_detail.html
+++ b/templates/article_detail.html
@@ -86,8 +86,8 @@
 </div>
 
 <script>
-let button = document.querySelector("input");
-input.addEventListener("submit", (event) => {
+let button = document.querySelector("button");
+button.addEventListener("submit", (event) => {
     event.preventDefault();
   })
 </script>
