--- a/static/css/style.css
+++ b/static/css/style.css
@@ -120,6 +120,11 @@ body {
     text-decoration: underline;
 }
 
+.btn-lg:hover {
+    box-shadow: inset 100px 0 0 0 #fde3e9;
+    color: #d606ba;
+  }
+
 body {
     font-weight: 400;
     line-height: 1.6;
