Changed the Home link on the 404,403 and 500 peages

--- a/templates/403.html
+++ b/templates/403.html
@@ -24,7 +24,8 @@
                   If the problem persists, please contact support at 08-123-456.
                   <br />
                   <br />
-                  <a href="{% url 'index' %}" class="text-primary text-gradient font-weight-bold">HOME</a>
+                  <a class="btn btn-sm font-weight-bold" style="background-color: #fff; color: #d606ba;" href="{% url 'index %}">
+                    HOME</a>
                 </p>
               </form>
             </div>
