Removed opacity form the front page and classes page to make text clearer to read

--- a/templates/404.html
+++ b/templates/404.html
@@ -24,7 +24,7 @@
                   If the problem persists, please contact support at 08-123-456.
                   <br />
                   <br />
-                  <a class="btn btn-lg font-weight-bold" style="background-color: #fff; color: #d606ba;" href="{% url 'index %}">
+                  <a class="btn btn-sm font-weight-bold" style="background-color: #fff; color: #d606ba;" href="{% url 'index %}">
                     HOME</a>
                 </p>
               </form>
