--- a/templates/classes.html
+++ b/templates/classes.html
@@ -12,7 +12,7 @@
 {% load static %} 
 
   <header class="bg-dark">
-    <div class="page-header min-vh-75 bg-gradient-dark opacity-6">
+    <div class="page-header min-vh-75 bg-gradient-dark">
         <img  class="bg-img" src="{% static 'images/spinning_class.jpg' %}" alt="biking_class">
       <div class="container">
         <div class="row justify-content-center">
