--- a/templates/manage_booking.html
+++ b/templates/manage_booking.html
@@ -37,13 +37,13 @@
                         </li>
                             <div class="text-center">
                                 <a href="{% url 'edit_booking' booking.booking_id %}"
-                                    class="button submit-button inline-btn" style="background-color: #d606ba;
+                                    class="button btn submit-button inline-btn" style="background-color: #d606ba;
                                     color: white;">Edit Booking</a>
                                 <a href="{% url 'delete_booking' booking.booking_id %}"
-                                    class="button cancel-button inline-btn" style="background-color: lightgray;
+                                    class="button btn cancel-button inline-btn" style="background-color: lightgray;
                                     color: #d606ba;">Cancel Booking</a>
                             </div>
-                            <hr>
+                            <hr style="color: #d606ba;">
                             </li>
                     </ul>
                 </div>
