--- a/static/css/style.css
+++ b/static/css/style.css
@@ -167,6 +167,35 @@ body {
     background-image: linear-gradient(195deg, #42424a 0%, #191919 100%);
 }
 
+.header-button {
+    display: inline-block;
+    background-color: #d606ba;
+    color: #fff;
+    font-weight: 800;
+    padding: 15px 30px;
+    border-radius: 5px;
+    box-shadow: 0px 17px 10px -10px #fff;
+    cursor: pointer;
+    -webkit-transition: all ease-in-out 300ms;
+    transition: all ease-in-out 300ms;
+  }
+
+  .header-button:hover {
+    box-shadow: 0px 37px 20px -20px #fff;
+    -webkit-transform: translate(0px, -10px) scale(1.2);
+            transform: translate(0px, -10px) scale(1.2);
+  }
+
+  .articles-button {
+    color: #fff;
+    background-color: #d606ba;
+}
+
+.articles-button:hover {
+    color: #d606ba;
+    background-color: #fde3e9;
+}
+
 /* Text dispay on the header image */
 
 .text-center {
