--- a/templates/classes.html
+++ b/templates/classes.html
@@ -45,7 +45,7 @@
       </div>
       <!-- Adjusting the view according to authentication -->
       {% if request.user.is_authenticated %}
-      <div class="card-footer text-center" style="background-color: #d606ba;"><a class="btn btn-secondary btn-lg" href="{% url 'booking' %}">Book</a></div>
+      <div class="card-footer text-center" style="background-color: #fde3e9;"><a class="booking-button btn btn-lg" href="{% url 'booking' %}">Book</a></div>
       {% else %}
       <div class="alert alert-danger" role="alert">
         You must be logged in to make bookings.
@@ -68,7 +68,7 @@
       </div>
       <!-- Adjusting the view according to authentication -->
       {% if request.user.is_authenticated %}
-      <div class="card-footer text-center" style="background-color: #d606ba;"><a class="btn btn-secondary btn-lg" href="{% url 'booking' %}">Book</a></div>
+      <div class="card-footer text-center" style="background-color: #fde3e9;"><a class="booking-button btn btn-lg" href="{% url 'booking' %}">Book</a></div>
       {% else %}
       <div class="alert alert-danger" role="alert">
         You must be logged in to make bookings.
@@ -90,7 +90,7 @@
       </div>
       <!-- Adjusting the view according to authentication -->
       {% if request.user.is_authenticated %}
-      <div class="card-footer text-center" style="background-color: #d606ba;"><a class="btn btn-secondary btn-lg" href="{% url 'booking' %}">Book</a></div>
+      <div class="card-footer text-center" style="background-color: #fde3e9;"><a class="booking-button btn btn-lg" href="{% url 'booking' %}">Book</a></div>
       {% else %}
       <div class="alert alert-danger" role="alert">
         You must be logged in to make bookings.
