--- a/templates/manage_booking.html
+++ b/templates/manage_booking.html
@@ -37,11 +37,9 @@
                         </li>
                             <div class="text-center">
                                 <a href="{% url 'edit_booking' booking.booking_id %}"
-                                    class="button btn submit-button inline-btn" style="background-color: #d606ba;
-                                    color: white;">Edit Booking</a>
+                                    class="button btn submit-button inline-btn">Edit Booking</a>
                                 <a href="{% url 'delete_booking' booking.booking_id %}"
-                                    class="button btn cancel-button inline-btn" style="background-color: lightgray;
-                                    color: #d606ba;">Cancel Booking</a>
+                                    class="button btn cancel-button inline-btn">Cancel Booking</a>
                             </div>
                             <hr style="color: #d606ba;">
                             </li>
