--- a/templates/edit_booking.html
+++ b/templates/edit_booking.html
@@ -23,8 +23,7 @@
                 {% csrf_token %}
                 {{ booking_form | crispy }}
 
-                <button type="submit" class="button mt-4 text-center submit-button" style="background-color: #d606ba;
-                color: white;">
+                <button type="submit" class="edit-booking-button button mt-4 text-center submit-button">
                     Edit Booking</button>
             </form>
         </div>
