Added background image when logging out and make the button on the sign in more dynamic

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -110,8 +110,8 @@ body {
 }
 
 .btn-signup:hover {
-    background-color: #d606ba;
-    color: #fff;
+    background-color: #fde3e9;
+    color: #d606ba;
 }
 
 .link {
