--- a/templates/account/logout.html
+++ b/templates/account/logout.html
@@ -5,6 +5,8 @@
 {% block head_title %}{% trans "Sign Out" %}{% endblock %}
 
 {% block content %}
+{% load static %} 
+<div class="page-header align-items-start min-vh-100" style="background-image: url({% static 'images/bike_pink.jpg' %});" loading="lazy">
 <div class="container">
   <div class="row">
     <div class="col-md-8 mt-3 offset-md-2">
@@ -25,5 +27,6 @@
       </form>
     </div>
   </div>
+</div>
 </div>
 {% endblock %}
