--- a/templates/account/login.html
+++ b/templates/account/login.html
@@ -37,7 +37,7 @@
               <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
               {% endif %}
               <div class="text-center">
-              <button class="btn btn-signup right" type="submit" style="background-color: #d606ba;">{% trans "Sign In" %}</button>
+              <button class="btn btn-signup right" type="submit">{% trans "Sign In" %}</button>
               </div>
               <p class="mt-4 text-sm text-center">
                 Don't have an account?
