--- a/templates/delete_booking.html
+++ b/templates/delete_booking.html
@@ -2,6 +2,8 @@
 
 {% block content %}
 
+{% load static %}
+<div class="page-header align-items-start min-vh-100" style="background-image: url({% static 'images/bike_pink.jpg' %});" loading="lazy">
 <div class="container-fluid">
     <div class="row d-flex justify-content-center">
         <div class="col-12 col-sm-8 col-md-6 col-lg-4 text-center mb-3">
@@ -53,6 +55,7 @@
             </form>
         </div>
     </div>
+</div>
 </div>
 
 {% endblock %}
