--- a/templates/manage_booking.html
+++ b/templates/manage_booking.html
@@ -9,7 +9,8 @@
 
 {% block content %}
 
-{% load static %} 
+{% load static %}
+<div class="page-header align-items-start min-vh-100" style="background-image: url({% static 'images/bike_pink.jpg' %});" loading="lazy">
 <div class="container-fluid">
     <div class="row d-flex justify-content-center">
         <div class="col-sm-8 text-center">
@@ -54,6 +55,7 @@
             </div>
         </div>
     </div>
+</div>
 </div>
 
 {% endblock %}
