--- a/templates/booking.html
+++ b/templates/booking.html
@@ -34,8 +34,7 @@
                 <!-- Booking form -->
                 {{ booking_form | crispy }}
 
-                <button type="submit" class="button mt-4 text-center submit-button" style="background-color: #d606ba;
-                color: white;">Book Class</button>
+                <button type="submit" class="booking-class-button button mt-4 text-center submit-button">Book Class</button>
 
             </form>
         </div>
